# online-store

./: .gitignore  Makefile  pyproject.toml  setup.cfg
orders/: admin.py  forms.py  models.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
products/fixtures/: categories.json  products.json  users.json
products/migrations/: 0001_initial.py  0002_alter_productcategory_options.py  0003_basket.py  0004_alter_basket_quantity.py  0005_product_stripe_product_price_id.py
store/: __init__.py  celery.py  settings.py  tests.py  urls.py  views.py
templates/: base.html  index.html
templates/components/: basket.html  carousel.html  pagination.html
templates/orders/: create_order.html  success.html
templates/products/: products.html
templates/users/: base.html  email_verification.html  login.html  profile.html  register.html
users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py  0003_emailverification_expiration.py  0004_alter_emailverification_code_and_more.py  0005_alter_emailverification_expiration.py  0006_alter_emailverification_expiration.py
