[tool.poetry]
name = "store"
version = "0.1.0"
description = "Online store on django"
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
python-dotenv = "^0.21.0"
dj-database-url = "^1.2.0"
django-bootstrap4 = "^22.3"
pillow = "^9.3.0"
psycopg2 = "^2.9.5"
django-allauth = "^0.52.0"
django-redis = "^5.2.0"
celery = "^5.2.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
